--- a/css/maps.css
+++ b/css/maps.css
@@ -4,8 +4,8 @@
 #map-content-title {font-family:arial;font-size:13px; color:#000; white-space:normal;float:left; margin-top:10px; margin-left:15px; padding-top:6px; } 
 #map-content-icons{}
 #map_console{background-image:url(../images/map.console.png);width:960px;height:96px;position:relative;top:-96px;overflow:hidden;}
-.console-title{font-family:georgia;font-size:24px;color:#A52A2A; float:left;margin:10px 0 0 5px;font-weight:bold;}
-.console-info{font-family:georgia;font-size:20px;color:#7F7F7F;float:left;margin:10px 0 0 5px;}
+.console-title{font-family:georgia;font-size:24px;color:#A52A2A; float:left;margin:10px 0 0 25px;font-weight:bold;}
+.console-info{font-family:georgia;font-size:20px;color:#7F7F7F;float:left;margin:15px 0 0 5px;}
 #map_factbox{background-image:url(../images/map.factbox.png);width:206px;height:133px;position:relative;top:-444px;left:701px}
 .factbox-title{font-family:arial;font-size:20px;  color:#FFFFFF;margin:3px 0 0 20px;}
 .map-factbox-info {margin:3px 0 0 25px;}
@@ -29,11 +29,12 @@
 .img-margins {margin-left:5px; margin-right:13px;}
 
 /*Table Styling*/
-td{text-align:center;}
+/*td{text-align:center;}*/
+
 thead{height:35px;width:930px;background-image:url(../images/table-top-row-bg.gif);}
 thead th{border-right:1px solid #4D4D4D;text-align:center;}
 .column_title{margin-right:2px;}
-.sort-icon{}
+.sort_icon{ display:none;}
 .top-row-col1 {border: 1px solid #dadcd1;}
 tr#feature_{height:35px;border-bottom:1px solid #dadcd1;}
 
@@ -103,4 +104,5 @@ tr#feature_{height:35px;border-bottom:1px solid #dadcd1;}
 
 #footer-maps #separator { float:left; margin-left:31px;}
 
-
+/*Pending */
+.chart { color: #883333; padding: 50px 50px;}
