--- a/css/maps.css
+++ b/css/maps.css
@@ -1,5 +1,6 @@
 /*Map Area*/
-#map-content {width:960px; height:535px; background:#FFFFFF;}
+#geoiq_map, #map-content {width:960px; height:535px; background:#FFFFFF;}
+
 #map-content-header{background-image:url(../images/map.nav.header.gif); border:medium none;height:47px;  overflow:hidden;  padding:0 0 0 10px;}
 #map-content-title {font-family:arial;font-size:13px; color:#000; white-space:normal;float:left; margin-top:10px; margin-left:15px; padding-top:6px; } 
 #map-content-icons{}
@@ -20,7 +21,7 @@
 /*Projects Search Bar*/
 #projects-bar {width:958px; height:45px; margin-top:17px; margin-bottom:17px; background-image:url(../images/project-bar-bg.gif); border-top:2px solid #9b0a07; border-left:1px solid #cfd1c4; border-bottom:1px solid #cfd1c4; border-right:1px solid #cfd1c4; float:left;}
 #project-search-box{background:url(../images/projects_search.jpg) no-repeat scroll 0 0 transparent;
-  left:600px; top:1145px;right:0;float:right;border:none;width:403px;height:31px; margin-top:-22px;}
+  left:600px; top:1145px;right:0;float:right;border:none;width:403px;height:31px; margin-top:-22px; padding-left: 5px;}
 .project-bar-text {width: 200px;font-family:arial, sans serif; font-size:12px; color:#000; margin-top: 15px; margin-left: 10px;}
   
 /*Data Table*/
@@ -45,14 +46,15 @@ tr#feature_{height:35px;border-bottom:1px solid #dadcd1;}
 
 /*Red Footer*/
 #red-footer {margin: 0px 0px 2px; padding: 0px 0px 0px; width:960px; height:35px; background:url(../images/red-footer-bg.gif); float:left}
+.red-footer-links b {padding-left: 18px;}
 #red-footer .footer-nav a , #footer .footer-breadcrumb a:visited,
-#red-footer .footer-nav a.topic, #footer .footer-nav a.topic:visited
-{color: #FFFFFF; font-size: 1em; font-family:Arial, sans-serif;}
+.red-footer-links, #red-footer .footer-nav a.topic, #footer .footer-nav a.topic:visited
+{color: #FFFFFF; font-size: 1em; font-family:Arial, sans-serif; font-size: 11px;}
 #red-footer .footer-nav a.topic, #footer .footer-nav a.topic:visited {color: #ffffff; font-weight: bold;}
 #red-footer p {margin: 0px 0px; padding: 0px;}
 #red-footer p.logos img {margin: 0px 10px;}
-#red-footer img {vertical-align: middle;}
-#red-footer a {color: #FFFFFF; font-size: 11px; font-family:Arial,sans-serif; margin-top:5px; padding-left: 18px;}
+#red-footer img {vertical-align: middle; padding-right: 5px;}
+#red-footer a {color: #FFFFFF; font-size: 11px; font-family:Arial,sans-serif; margin-top:5px; padding-left:}
 #red-footer .footer-nav {
   margin:10px 0px 0px 0px;
   padding: 0px;
