--- a/css/maps.css
+++ b/css/maps.css
@@ -1,73 +1,156 @@
 /*Map Area*/
-#geoiq_map, #map-content {width:960px; height:535px; background:#FFFFFF;}
+#geoiq_map{width:958px; height:514px;}
 
-#map-content-header{background-image:url(../images/map.nav.header.gif); border:medium none;height:47px;  overflow:hidden;  padding:0 0 0 10px;}
+#map-content {width:958px; height:514px; border-left:solid 1px #d9dbcd; border-bottom:solid 1px #d9dbcd;  border-right:solid 1px #d9dbcd; background:#FFFFFF;}
+#map-content-header{background-image:url(../images/map.nav.header.gif); border:medium none;height:47px;  overflow:hidden;  padding:0 0 0 0}
 #map-content-title {font-family:arial;font-size:13px; color:#000; white-space:normal;float:left; margin-top:10px; margin-left:15px; padding-top:6px; } 
-#map-content-icons{}
-#map_console{background-image:url(../images/map.console.png);width:960px;height:96px;position:relative;top:-96px;overflow:hidden;}
-.console-title{font-family:georgia;font-size:24px;color:#A52A2A; float:left;margin:10px 0 0 25px;font-weight:bold;}
-.console-info{font-family:georgia;font-size:20px;color:#7F7F7F;float:left;margin:15px 0 0 5px;}
+#map-content-sectors {font-family:arial;font-size:13px; color:#777876; white-space:normal;float:right; margin-top:10px; margin-right:25px; margin-left:15px; padding-top:6px; } 
+
+#map-content-icons {width:480px; margin:13px 21px 0 0; float:right;}#map-content-icons ul{float:left; list-style:none; margin: 0;padding:0;}
+#map-content-icons ul li{float:left;}
+#map-content-icons ul li a{height:19px;	color:#FFFFFF;display:block; text-decoration:none; margin:0; background:url(../images/sector-icons.gif) no-repeat 0 0; text-indent:-9999px}
+
+#map-content-icons ul li.sectors{width:130px;  margin-top:3px; font-family:arial;font-size:13px; color:#777876; float:left }
+#map-content-icons ul li.all {font-family:arial;font-size:13px; padding:3px 0 3px 5px; color:#777876; float:left }
+
+#map-content-icons ul li.s1 a{width: 19px; margin-right:11px; background:url(../images/sector-icons.gif) no-repeat 0 0}
+#map-content-icons ul li.s1 a:hover,#map-s1-icons ul li.s1 a.active{width: 19px; margin-right:11px; background:url(../images/sector-icons.gif) no-repeat 0 -19px}
+
+#map-content-icons ul li.s2 a{width: 19px; margin-right:11px;  background:url(../images/sector-icons.gif) no-repeat -30px 0}
+#map-content-icons ul li.s2 a:hover,#map-content-icons ul li.s2 a.active{width: 19px; margin-right:11px; background:url(../images/sector-icons.gif)  no-repeat -30px -19px}
+
+#map-content-icons ul li.s3 a{width: 19px;  margin-right:11px; background:url(../images/sector-icons.gif) no-repeat -60px 0}
+#map-content-icons ul li.s3 a:hover,#map-content-icons ul li.s3 a.active{width: 19px; background:url(../images/sector-icons.gif) no-repeat -60px -19px}
+
+#map-content-icons ul li.s4 a{width: 19px;  margin-right:11px; background:url(../images/sector-icons.gif) no-repeat -90px 0}
+#map-content-icons ul li.s4 a:hover,#map-content-icons ul li.s4 a.active{width: 19px; background:url(../images/sector-icons.gif) no-repeat -90px -19px}
+
+#map-content-icons ul li.s5 a{width: 19px;  margin-right:11px; background:url(../images/sector-icons.gif) no-repeat -120px  0}
+#map-content-icons ul li.s5 a:hover,#map-content-icons ul li.s5 a.active{width: 19px; background:url(../images/sector-icons.gif) no-repeat -120px -19px}
+
+#map-content-icons ul li.s6 a{width: 19px;  margin-right:11px; background:url(../images/sector-icons.gif) no-repeat -150px  0}
+#map-content-icons ul li.s6 a:hover,#map-content-icons ul li.s6 a.active{width: 19px; background:url(../images/sector-icons.gif) no-repeat -150px -19px}
+
+#map-content-icons ul li.s7 a{width: 19px;  margin-right:11px; background:url(../images/sector-icons.gif) no-repeat -180px 0}
+#map-content-icons ul li.s7 a:hover,#map-content-icons ul li.s7 a.active{width: 19px; background:url(../images/sector-icons.gif) no-repeat -180px -19px}
+
+#map-content-icons ul li.s8 a{width: 19px;  margin-right:11px; background:url(../images/sector-icons.gif) no-repeat -210px 0}
+#map-content-icons ul li.s8 a:hover,#map-content-icons ul li.s8 a.active{width: 19px; background:url(../images/sector-icons.gif) no-repeat -210px -19px}
+
+#map-content-icons ul li.s9 a{width: 19px;  margin-right:11px; background:url(../images/sector-icons.gif) no-repeat -240px 0}
+#map-content-icons ul li.s9 a:hover,#map-content-icons ul li.s9 a.active{width: 19px; background:url(../images/sector-icons.gif) no-repeat -240px -19px}
+
+#map-content-icons ul li.s10 a{width: 19px;  margin-right:11px; background:url(../images/sector-icons.gif) no-repeat -270px 0}
+#map-content-icons ul li.s10 a:hover,#map-content-icons ul li.s10 a.active{width: 19px; background:url(../images/sector-icons.gif) no-repeat -270px -19px}
+
+
+
+
+#map_console{background-image:url(../images/map.console.png);width:960px;height:97px; float:left; margin-top:-97px; position:absolute; border-top:solid 1px #d9dbcd}
+.console-title{font-family:georgia;font-size:24px; line-height:25px;color:#A52A2A; float:left;margin:20px 0 0 25px;font-weight:bold; text-align:right}
+.console-info{font-family:georgia;font-size:18px; line-height:26px; color:#7F7F7F;float:left;margin:20px 0 0 10px; float:left; text-align:left}
+.console-title p, .console-info p {padding:0; margin:0}
+
 #map_factbox{background-image:url(../images/map.factbox.png);width:206px;height:133px;position:relative;top:-444px;left:701px}
 .factbox-title{font-family:arial;font-size:20px;  color:#FFFFFF;margin:3px 0 0 20px;}
 .map-factbox-info {margin:3px 0 0 25px;}
 
+
+/*.......................................................NEW 9/23/2010.................................................................*/
+
 /*Charts Under Map*/
-#chart-left {margin-top:20px; margin-bottom:17px; width:474px; height:260px; float:left; border-right:2px solid #d7d7d7;}
-#funding_by_region{}
-#chart-right {margin-top:20px; margin-bottom:17px; width:476px; height:260px; float:left;}
+
+
+/*LEFT CHART*/
+#chart-left {margin-top:20px; margin-bottom:17px; width:474px; height:260px; float:left; border-right:1px solid #b3b3b3;}
+#chart-left #chart-left-title  { width:440px; height:25px; border-bottom: solid 1px #ececec; margin-top:10px; margin-left:10px;}
+#chart-left h1 {font-family:Arial,sans-serif; font-size:14px; color:#8a8a8a; margin-left:0px;}
+
+	#chart-left-stat { width:175px; height:210px; float:left;margin-left:10px;}
+		#chart-left-stat h1 {font-family:Georgia, serif; font-size:26px; color:#970001; font-weight:bold; margin-top:16px;}
+		#chart-left-stat h2 {font-family:Arial, sans-serif; font-size:11px; color:#9f9f9f; line-height:17px; padding-right:18px;}
+
+	#chart-left-pie-chart {width:262px; height:210px; float:left;}
+
+/*RIGHT CHART*/
+#chart-right {margin-top:20px;margin-bottom:17px; width:476px; height:260px; float:left;}
+	#chart-right-title  { width:440px; height:25px; border-bottom: solid 1px #ececec; margin-top:10px; margin-left:25px; margin-bottom:12px;}
+	#chart-right h1 {font-family:Arial,sans-serif; font-size:14px; color:#8a8a8a; margin-left:0px;}
+	#chart-right-stat-subtitle {width:200px; height:30px; margin-left:25px;}
+	#chart-right-stat-subtitle h1 {font-family:Georgia, serif; font-size:26px; color:#970001; font-weight:bold;}
+	#subtitle-comment { width:100px; height:30px;font-family:Arial, sans-serif; font-size:11px; color:#9f9f9f;}
+	#chart-right-graph {width:440px; height:155px; margin-left:25px;}
+	
+/* ........................................................END NEW 9/23/2010.................................................................. */
+
 .block-title { font-family:arial, sans serif;  background:none repeat scroll 0 0 transparent;  border-bottom:1px solid #E0E0E0;
   color:#666666;  font-size:11px;  font-weight:bold;  line-height:20px;  padding:5px 0px 0px 5px;margin:0px 0px 0px 5px;  width:80%;}
 
 /*Projects Search Bar*/
 #projects-bar {width:958px; height:45px; margin-top:17px; margin-bottom:17px; background-image:url(../images/project-bar-bg.gif); border-top:2px solid #9b0a07; border-left:1px solid #cfd1c4; border-bottom:1px solid #cfd1c4; border-right:1px solid #cfd1c4; float:left;}
-#project-search-box{background:url(../images/projects_search.jpg) no-repeat scroll 0 0 transparent;
-  left:600px; top:1145px;right:0;float:right;border:none;width:403px;height:31px; margin-top:-22px; padding-left: 5px;}
+#project-search-box{background:url(../images/projects_search.jpg) no-repeat scroll 0 0 transparent; right:0;float:right;border:none;width:400px;height:31px; margin-top:-22px; padding-left: 10px;}
 .project-bar-text {width: 200px;font-family:arial, sans serif; font-size:12px; color:#000; margin-top: 15px; margin-left: 10px;}
-  
-/*Data Table*/
-#data-table {width:960px; height:auto; float:left;}
-#projects-table_grid{width:101%;}
-.img-margins {margin-left:5px; margin-right:13px;}
+.project-search-box-text {font-family:arial, sans serif; font-size:13px;}
 
-/*Table Styling*/
-/*td{text-align:center;}*/
+/*.......................................................NEW 9/23/2010.................................................................*/
 
-thead{height:35px;width:930px;background-image:url(../images/table-top-row-bg.gif);}
-thead th{border-right:1px solid #4D4D4D;text-align:center;}
-.column_title{margin-right:2px;}
-.sort_icon{ display:none;}
-.top-row-col1 {border: 1px solid #dadcd1;}
-tr#feature_{height:35px;border-bottom:1px solid #dadcd1;}
-
-/*Page Scroll Layer*/
-#page-scroll {width:958px; height:33px; float:left; border: 1px solid #d9dcdc; margin-top:17px; margin-bottom:17px;}
-.pagination{font-family:arial;font-size:12px;color:#7F7F7F;float:left;margin:10px 0 0 5px;}
-.pagination a{color:#7F7F7F;margin-right:5px;}
-
-/*Red Footer*/
-#red-footer {margin: 0px 0px 2px; padding: 0px 0px 0px; width:960px; height:35px; background:url(../images/red-footer-bg.gif); float:left}
-.red-footer-links b {padding-left: 18px;}
-#red-footer .footer-nav a , #footer .footer-breadcrumb a:visited,
-.red-footer-links, #red-footer .footer-nav a.topic, #footer .footer-nav a.topic:visited
-{color: #FFFFFF; font-size: 1em; font-family:Arial, sans-serif; font-size: 11px;}
-#red-footer .footer-nav a.topic, #footer .footer-nav a.topic:visited {color: #ffffff; font-weight: bold;}
-#red-footer p {margin: 0px 0px; padding: 0px;}
-#red-footer p.logos img {margin: 0px 10px;}
-#red-footer img {vertical-align: middle; padding-right: 5px;}
-#red-footer a {color: #FFFFFF; font-size: 11px; font-family:Arial,sans-serif; margin-top:5px; padding-left:}
-#red-footer .footer-nav {
-  margin:10px 0px 0px 0px;
-  padding: 0px;
+/*PROJECT TABLE STYLING*/
+table {
+border-collapse: collapse;
+width:960px;
+font-family:Arial, sans-serif;
+font-size:12px;
+color:#000;
 }
 
-#red-footer .red-footer-links li {
-  list-style : none ;
-  display : inline ;
-  padding : 0 4px 0 4px;
-}
-#red-footer .red-footer-links li.last {
-  border-right : none;
-}
+table,th,td
+{height:50px;padding-left:13px; margin-top:6px;}
+
+table, th {
+background:url(../images/table-th-bg.gif) repeat-x;font-family:Arial, sans-serif; font-size:12px; font-weight:100; color:#000; padding-left:13px;}
+
+th { border: 1px solid #dadcd1;}
+td {font-family: Arial, sans-serif; font-size:12px; vertical-align:middle;}
+
+td h1 {font-family: Georgia, Times, serif; font-size:13px; font-weight:100; line-height:20px; margin-top:10px; margin-right:8px;}
+
+#projects-table th:first-child, .project-th {background: url(../images/table-th-project-list-bg.gif) repeat-x; border:: 1px solid #dadcd1;}
+#projects-table th {min-width: 60px;}
+#projects-table tbody {overflow-y: auto; overflow-x: hidden; height: 435px;}
+.load_link {display: none;}
+.sort_icon, .table-th-black-arrow {display: none; padding-right:5px; background-image: url(../images/down-arrow-black.gif);}
+.background-colored-cell, .row_even {background-color:#eeefe9;}
+
+
+
+/*Table Header 2-line titles styling*/
+
+#commitment-amount-th {width: 65px; height: 30px;font-family:Arial, sans-serif; font-size:12px; font-weight:100; 
+color:#000; text-align:left; padding-left:18px; margin-top:10px; margin-left:-10px; float:left;}
+#commitment-arrow { width:11px; margin-top:11px;float:left;}
+/*.......................................................END NEW 9/23/2010.................................................................*/
+
+
+
+/*.......................................................NEW 9/23/2010.................................................................*/
+
+/*Pagination Layer*/
+#page-scroll {width:960px; height:33px; float:left;margin-top:17px; margin-bottom:17px;}
+
+#pagination { display: none; width:958px; height:30px; border:1px solid #d9dcdc; position:relative}
+#pagination ul{float:left; list-style:none; margin: 0;padding:0;}
+#pagination ul li{float:left; border-left: 1px solid #eeeeee; margin-top: 7px;}
+#pagination ul li a{font-size:10px; color:#989a94; display:block; font-weight:100; text-decoration:none; margin:0;padding:4px 9px}
+#pagination ul li a:hover{color:#222222;}
+#pagination ul li a.active{color:#7c7c7c;background-color:#d5d5d5;}
+
+#pagination ul li.previous { border-left:solid 1px #fff; padding: 0 0;}
+#pagination ul li.fulllist { border-left:solid 1px #fff;}
+
+/*.......................................................END NEW 9/23/2010.................................................................*/
+
+
+
 
 /*Grey Footer*/
 
@@ -107,4 +190,5 @@ tr#feature_{height:35px;border-bottom:1px solid #dadcd1;}
 #footer-maps #separator { float:left; margin-left:31px;}
 
 /*Pending */
-.chart { color: #883333; padding: 50px 50px;}
+.chart {color: #883333; padding: 50px 50px;}
+
