--- a/m4r/views/layout.erb
+++ b/m4r/views/layout.erb
@@ -2,52 +2,29 @@
 <html class="js" xml:lang="en" xmlns="http://www.w3.org/19	99/xhtml" lang="en"><head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <title>The World Bank - Mapping for Results</title>
-  <link href="http://beta.worldbank.org/feed" title="Mapping for Results Whats New | World Bank" type="application/rss+xml" rel="alternate">
+
+  <link href="<%= PLATFORM_API_URL %>/feed" title="Mapping for Results Whats New | World Bank" type="application/rss+xml" rel="alternate">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">  
-  <link rel="shortcut icon" href="http://beta.worldbank.org/sites/default/files/climatechange_favicon.png" type="image/x-icon">
+  <link rel="shortcut icon" href="<%= PLATFORM_API_URL %>/sites/default/files/climatechange_favicon.png" type="image/x-icon">
   
-  <!-- TODO: Move these to a minified css -->
-  <link type="text/css" rel="stylesheet" media="all" href="The%20World%20Bank%20-%20Climate%20Change_files/aggregator.css">
-  <link type="text/css" rel="stylesheet" media="all" href="The%20World%20Bank%20-%20Climate%20Change_files/node.css">
-  <link type="text/css" rel="stylesheet" media="all" href="The%20World%20Bank%20-%20Climate%20Change_files/defaults.css">
-  <link type="text/css" rel="stylesheet" media="all" href="The%20World%20Bank%20-%20Climate%20Change_files/system.css">
-  <link type="text/css" rel="stylesheet" media="all" href="The%20World%20Bank%20-%20Climate%20Change_files/system-menus.css">
-  <link type="text/css" rel="stylesheet" media="all" href="The%20World%20Bank%20-%20Climate%20Change_files/content-module.css">
-  <link type="text/css" rel="stylesheet" media="all" href="The%20World%20Bank%20-%20Climate%20Change_files/ctools.css">
-  <link type="text/css" rel="stylesheet" media="all" href="The%20World%20Bank%20-%20Climate%20Change_files/custompage.css">
-  <link type="text/css" rel="stylesheet" media="all" href="The%20World%20Bank%20-%20Climate%20Change_files/filefield.css">
-  <link type="text/css" rel="stylesheet" media="all" href="The%20World%20Bank%20-%20Climate%20Change_files/date.css">
-  <link type="text/css" rel="stylesheet" media="all" href="The%20World%20Bank%20-%20Climate%20Change_files/datepicker.css">
-  <link type="text/css" rel="stylesheet" media="all" href="The%20World%20Bank%20-%20Climate%20Change_files/timeentry.css">
-  <link type="text/css" rel="stylesheet" media="all" href="The%20World%20Bank%20-%20Climate%20Change_files/fieldgroup.css">
-  <link type="text/css" rel="stylesheet" media="all" href="The%20World%20Bank%20-%20Climate%20Change_files/views.css">
-  <link type="text/css" rel="stylesheet" media="all" href="The%20World%20Bank%20-%20Climate%20Change_files/jquery.css">
-  <link type="text/css" rel="stylesheet" media="all" href="The%20World%20Bank%20-%20Climate%20Change_files/footer.css">
-  <link type="text/css" rel="stylesheet" media="all" href="The%20World%20Bank%20-%20Climate%20Change_files/collapsible.css">
-  <link type="text/css" rel="stylesheet" media="all" href="The%20World%20Bank%20-%20Climate%20Change_files/style.css">
-  <link type="text/css" rel="stylesheet" media="all" href="The%20World%20Bank%20-%20Climate%20Change_files/layout.css">
-  <link type="text/css" rel="stylesheet" media="all" href="The%20World%20Bank%20-%20Climate%20Change_files/one-off.css">
-  <link type="text/css" rel="stylesheet" media="all" href="The%20World%20Bank%20-%20Climate%20Change_files/people.css">
-  <link type="text/css" rel="stylesheet" media="all" href="The%20World%20Bank%20-%20Climate%20Change_files/data.css">
-  <link type="text/css" rel="stylesheet" media="all" href="The%20World%20Bank%20-%20Climate%20Change_files/custom.css">
-  <link type="text/css" rel="stylesheet" media="all" href="The%20World%20Bank%20-%20Climate%20Change_files/override.css">
-  <link type="text/css" rel="stylesheet" media="print" href="The%20World%20Bank%20-%20Climate%20Change_files/print.css">
+  <link type="text/css" rel="stylesheet" media="all" href="/css/system-menus.css">
+  <link type="text/css" rel="stylesheet" media="all" href="/css/collapsible.css">
+  <link type="text/css" rel="stylesheet" media="all" href="/css/style.css">
+  <link type="text/css" rel="stylesheet" media="all" href="/css/layout.css">
+  <link type="text/css" rel="stylesheet" media="all" href="/css/one-off.css">
+                                                           
+  <link type="text/css" rel="stylesheet" media="all" href="/css/tipsy.css">
+  <link type="text/css" rel="stylesheet" media="all" href="/css/maps.css">
 
-<!--[if lte IE 7]><link type="text/css" rel="stylesheet" media="all" href="/sites/default/themes/climatechange/fix-ie.css" /><![endif]--><!--If Less Than or Equal (lte) to IE 7-->
-<!--[if IE 8]><link rel="stylesheet" href="css/ie.css" type="text/css"><![endif]-->
-<link type="text/css" rel="stylesheet" media="all" href="css/maps.css">
-
-<!-- TODO: Remove these unnecessary Javascript -->
-<script type="text/javascript" src="The%20World%20Bank%20-%20Climate%20Change_files/jquery.js"></script>
-<script type="text/javascript" src="The%20World%20Bank%20-%20Climate%20Change_files/drupal.js"></script>
-<script type="text/javascript" src="The%20World%20Bank%20-%20Climate%20Change_files/collapsible.js"></script>
-<!--script type="text/javascript" src="The%20World%20Bank%20-%20Climate%20Change_files/view_rotator.js"></script-->
-<script type="text/javascript" src="The%20World%20Bank%20-%20Climate%20Change_files/jquery_002.js"></script>
-<script type="text/javascript" src="The%20World%20Bank%20-%20Climate%20Change_files/ui.js"></script>
-
-<script type="text/javascript" src="The%20World%20Bank%20-%20Climate%20Change_files/effects_002.js"></script>
-<script type="text/javascript" src="The%20World%20Bank%20-%20Climate%20Change_files/effects.js"></script>
-<script type="text/javascript" src="The%20World%20Bank%20-%20Climate%20Change_files/search_box.js"></script>
+  <script type="text/javascript" src="/js/jquery-1.js"></script>
+  <script type="text/javascript" src="/js/tipsy.js"></script>
+  <script type="text/javascript" src="/js/drupal.js"></script>
+  <script type="text/javascript" src="/js/collapsible.js"></script>
+  <script type="text/javascript" src="/js/jquery_002.js"></script>
+  <script type="text/javascript" src="/js/ui.js"></script>
+  <script type="text/javascript" src="/js/effects_002.js"></script>
+  <script type="text/javascript" src="/js/effects.js"></script>
+  <script type="text/javascript" src="/js/search_box.js"></script>
 
 <script type="text/javascript" charset="utf-8" src="<%= PLATFORM_API_URL %>/javascripts/prototype.js"></script>
 <script type="text/javascript" charset="utf-8" src="<%= PLATFORM_API_URL %>/javascripts/jquery-1.3.2.min.js"></script>
@@ -79,42 +56,45 @@ var jq = jQuery.noConflict();
 <!-- Layout -->
 <div id="wrapper">
   <div id="header">
-    <a href="http://www.worldbank.org/">
-      <img src="images/worldbank_logo.gif" alt="" id="logo">
-    </a>
+    <div id="languages">
+      <ul>
+        <li class="en first"><a href="http://www.worldbank.org/" class="active">English</a></li>
+        <li><a href="http://www.bancomundial.org/">Español</a></li>
+        <li><a href="http://www.banquemondiale.org/">Français</a></li>
+        <li><a href="http://www.worldbank.org/russian">Pусский</a></li>
+        <li><a href="http://www.albankaldawli.org/">عربي</a></li>
+        <li class="chinese"><a href="http://www.worldbank.org.cn/Chinese">中文</a></li>
+        <li class="more"><a href="http://web.worldbank.org/WBSITE/EXTERNAL/0,,contentMDK:20130470%7EpagePK:50016803%7EpiPK:50016805%7EtheSitePK:13,00.html">View more</a></li>
+      </ul>
+    </div>    
+    <span id="header"><a href="http://www.worldbank.org/"> <img src="images/worldbank_logo.gif" alt="" width="232" height="55" border="0" id="logo" /> </a> </span>
     <%= partial :search %>
-    <div id="nav">
-      <ul class="links primary-links"><li class="menu-1663 active-trail link-1 first last active"><a href="http://beta.worldbank.org/" title="" class="active">Home</a></li>
-      </ul>                                                  </div> <!-- /#nav -->
-      <div class="clear"></div>
+    <div id="network">
+      <div class="navigation"> <a class="network-home" href="http://www.worldbank.org">The World Bank</a>
+        <ul class="links network-links">
+          <li><a href="http://www.worldbank.org/about">About</a></li>
+          <li><a class="active" href="http://www.worldbank.org/data">Data</a></li>
+          <li><a href="http://econ.worldbank.org">Research</a></li>
+          <li><a href="http://www.worldbank.org/wbi">Learning</a></li>
+          <li><a href="http://www.worldbank.org/news">News</a></li>
+          <li><a href="http://www.worldbank.org/projects">Projects &amp; Operations</a></li>
+          <li class="last"><a href="http://www.worldbank.org/reference">Publications</a></li>
+        </ul>
+        <ul class="links network-special-links">
+          <li class="countries first"><a href="http://www.worldbank.org/countries">Countries</a></li>
+          <li class="topics last"><a href="http://www.worldbank.org/topics">Topics</a></li>
+        </ul>
+      </div>
+    </div>
+    <!-- /#network -->
+    <div class="clear"></div>
     </div> 
     <!-- /#header -->
 
     <%= partial :overview %>
     <%= yield  %>
 
-      <!--Red Footer Begins-->
-      <div id="red-footer">
-        <div class="red-footer-links"><b>You are here:</b><img src="images/spacer.gif"/><%= map_link(@country) %></div>
-      </div>
-
-      <div id="footer-maps">
-        <div id="logo-footer-grey"><img src="images/grey-footer-logo.png" alt="World Bank" /></div>
-        <div class="footer-breadcrumb"><a href="">World Bank</a></div>
-        <div id="separator"><img src="images/separator-grey-footer.gif" alt="" /></div>
-        <div class="footer-breadcrumb"><a href="">IBRD</a></div>
-        <div class="footer-breadcrumb"><a href="">IDA</a></div>
-        <div class="footer-breadcrumb"><a href="">IFC</a></div>
-        <div class="footer-breadcrumb"><a href="">MIGA</a></div>
-        <div class="footer-breadcrumb"><a href="">ICSID</a></div>
-      </div>
-      <!--Grey Footer Ends-->
-
-    </div>
-    <!-- /#footer -->
-  </div>
-  <!-- /#container -->
-
+    <%= partial :footer %>
 </div>
 <span class="clear"></span>
 
