--- a/m4r/views/sector_controls.erb
+++ b/m4r/views/sector_controls.erb
@@ -1,17 +1,17 @@
 
   <script type="text/javascript">
   $(function() {
-       jq('#sector1').tipsy({gravity: jQuery.fn.tipsy.autoNS});
-       jq('#sector2').tipsy({gravity: jQuery.fn.tipsy.autoNS});
-       jq('#sector3').tipsy({gravity: jQuery.fn.tipsy.autoNS});
-       jq('#sector4').tipsy({gravity: jQuery.fn.tipsy.autoNS});
-       jq('#sector5').tipsy({gravity: jQuery.fn.tipsy.autoNS});
-       jq('#sector6').tipsy({gravity: jQuery.fn.tipsy.autoNS});
-       jq('#sector7').tipsy({gravity: jQuery.fn.tipsy.autoNS});
-       jq('#sector8').tipsy({gravity: jQuery.fn.tipsy.autoNS});
-       jq('#sector9').tipsy({gravity: jQuery.fn.tipsy.autoNS});
-       jq('#sector10').tipsy({gravity: jQuery.fn.tipsy.autoNS});
-       jq('#sector11').tipsy({gravity: jQuery.fn.tipsy.autoNS});
+       // $('#sector1').tipsy({gravity: $.fn.tipsy.autoNS});
+       // $('#sector2').tipsy({gravity: $.fn.tipsy.autoNS});
+       // $('#sector3').tipsy({gravity: $.fn.tipsy.autoNS});
+       // $('#sector4').tipsy({gravity: $.fn.tipsy.autoNS});
+       // $('#sector5').tipsy({gravity: $.fn.tipsy.autoNS});
+       // $('#sector6').tipsy({gravity: $.fn.tipsy.autoNS});
+       // $('#sector7').tipsy({gravity: $.fn.tipsy.autoNS});
+       // $('#sector8').tipsy({gravity: $.fn.tipsy.autoNS});
+       // $('#sector9').tipsy({gravity: $.fn.tipsy.autoNS});
+       // $('#sector10').tipsy({gravity: $.fn.tipsy.autoNS});
+       // $('#sector11').tipsy({gravity: $.fn.tipsy.autoNS});
   });
   </script>
 
