--- a/m4r/views/share.erb
+++ b/m4r/views/share.erb
@@ -2,7 +2,7 @@
       <ul>
      <!--   <li class="print"><a href="#">Print</a></li>
         <li class="email"><a href="#">Email</a></li>-->
-        <li class="download"><a href="#">DOWNLOAD</a></li>
+        <li class="download"><a href="" id="download_data">DOWNLOAD</a></li>
         <li class="simpleshare_link"><a href="http://data.worldbank.org/topic/public-sector" >SHARE</a></li>
       </ul>
     </div>
