--- a/css/layout.css
+++ b/css/layout.css
@@ -447,11 +447,11 @@ margin-bottom:10px;
 #share ul li.download a {background:#fff url(../images/sprite2.png) 0px -20px no-repeat;padding-left:19px;}
 
 #download ul{float:left; list-style:none; margin: 0;padding:0; width:500px;}
-#download { color: #7F7F7F; padding:22px 0 0 0; margin-left:123px;float:left;}
+#download { color: #7F7F7F; padding:22px 0 0 0; margin-right:55px;float:right;}
 #download ul li{float:left;}
 #download ul li.button a {background:#fff url(../images/sprite2.png) 0px -20px no-repeat;padding-left:19px;}
 
-.dropmenuholder {float:left; margin: 10px 0 0 124px;}
+.dropmenuholder {float:right; margin: 10px 20px 0 0;}
 .worldmenuholder {float:left; margin: 0}
 
 
@@ -521,7 +521,10 @@ margin-bottom:10px;
 	position: absolute;
 	margin: 0;
 	padding: 0;}
-	
+
+.dropmenu.inactive {
+    opacity: 0.6;
+}
 .dropmenu li:hover li, .worldmenu li:hover li {
 	float: none; }
 	
