--- a/m4r/views/map.erb
+++ b/m4r/views/map.erb
@@ -3,6 +3,8 @@ var proxy_host = "<%= PLATFORM_API_URL %>";
 var project_attributes = ["project t0", "project i0", "activity count", "financing", "sector1", "approval 0"];
 var worldbank_sectors = ["agriculture","communication","energy","education","finance","health","industry","public","transportation","water"];
 
+var sector_icons =  {"EP":"http://geoiq.local/images/icons/wb/education-on.png","AZ":"http://geoiq.local/images/icons/wb/agriculture-on.png","JB":"http://geoiq.local/images/icons/wb/health-on.png","BC":"http://geoiq.local/images/icons/wb/public-on.png","TA":"http://geoiq.local/images/icons/wb/transportation-on.png","LE":"http://geoiq.local/images/icons/wb/energy-on.png","TZ":"http://geoiq.local/images/icons/wb/transportation-on.png","LD":"http://geoiq.local/images/icons/wb/energy-on.png","WZ":"http://geoiq.local/images/icons/wb/water-on.png","BL":"http://geoiq.local/images/icons/wb/public-on.png","BU":"http://geoiq.local/images/icons/wb/public-on.png","AB":"http://geoiq.local/images/icons/wb/agriculture-on.png","FD":"http://geoiq.local/images/icons/wb/finance-on.png","ET":"http://geoiq.local/images/icons/wb/education"};
+
 var project_sectors = {"General agriculture":"agriculture", "Agricultural extension and research":"agriculture", "fishing and forestry sector":"agriculture", 
   "Central government administration":"public","Public administration- Energy and mining": "public", "Public administration- Agriculture, fishing and forestry": "public", 
   "Primary education":"education", "Tertiary education": "education",
@@ -24,6 +26,13 @@ if(typeof(F1)=='undefined') {F1 = {}}
       return size;
   };
 
+  Object.include = function(arr, obj) {
+    for(var i=0; i<arr.length; i++) {
+      if (arr[i] == obj) return i;
+    }
+    return null;
+  }
+
   String.prototype.capitalize = function(){
     return this.replace( /(^|\s)([a-z])/g , function(m,p1,p2){ return p1+p2.toUpperCase(); } );
   };  
@@ -33,7 +42,13 @@ if(typeof(F1)=='undefined') {F1 = {}}
     // F1.WorldBank.instances[options.id] = this;
   }
 
-
+  F1.WorldBank.indicators = {
+		"Extreme Poverty": {source: "finder:", title:"Poverty", subtitle: "1998 Headcount Index", styles: { type: "CHOROPLETH",fill: { colors: [0xFEF7A5, 0xFECE6D, 0xEC8414, 0xAE4C02, 0x662506], categories: 5, classificationType: "St Dev", opacity: 0.55, selectedAttribute: "Height_for" }}},
+		"Malnutrition": {source: "finder:", title:"Child Malnutrition", subtitle: "Percentile weight of Children under 5 (DHS 1998)", styles: { type: "CHOROPLETH", fill: { colors: [0x4A342C, 0x7C6253, 0xA4866D, 0xD1B79F, 0xEBD9C2], categories: 5, classificationType: "EQUAL INTERVAL", opacity: 0.75, selectedAttribute: "Weight_for" }}},
+		"Infant Mortality": {source: "finder:", title:"Infant Mortality Rate", subtitle: "Per 1,000 live births (DHS 1998)", styles: { type: "CHOROPLETH", fill: { colors: [0xFEE5D9, 0xFCAE91, 0xFB6A4A, 0xDE2D26, 0xA50F15], categories: 5, classificationType: "EQUAL INTERVAL", opacity: 0.75, selectedAttribute: "Infant_mor"}}},
+    "Maternal Health": {source: "finder:", title:"Births attended by skilled health staff ", subtitle: "% of Total (DHS 1998)", styles: { type: "CHOROPLETH",fill: { colors: [0x511483, 0x835BA4, 0xC090BD, 0xE3BBC2, 0xFCE3D7], categories: 5, classificationType: "EQUAL INTERVAL", opacity: 0.75, selectedAttribute: "Total_Skil"}}},
+    "Population": {source: "finder:", title:"Population", subtitle: "", styles: { type: "CHOROPLETH",fill: { colors: [0xEFF3FF, 0xBDD7E7, 0x6BAED6, 0x3182BD, 0x08519C], categories: 5, classificationType: "EQUAL INTERVAL", opacity: 0.75, selectedAttribute: "pop"}}}
+	},
   F1.WorldBank.prototype = {
     init: function(map_id) {
       
@@ -42,7 +57,8 @@ if(typeof(F1)=='undefined') {F1 = {}}
       this.projects = {};
       this.sectors = {};
       this.total_funding = 0;
-      
+      this.stylelayers = {};
+      this.initialized = false;
       for(var i=0;i< worldbank_sectors.length;i++) {
         this.sectors[worldbank_sectors[i]] = {funding: 0, projects: [], activities: 0, sector: worldbank_sectors[i]};
       }
@@ -53,12 +69,24 @@ if(typeof(F1)=='undefined') {F1 = {}}
                 uiHeader: true,hideGCLogo: true,hideGILogo: true,
                 ShowControl:("Legend",true,"open"),
                 core_host:  proxy_host + '/', finder_host:proxy_host + '/', maker_host: proxy_host + '/',
-                onload: function() { <%= @country[:projects].nil? ? "" : "self.drawCharts(map, #{(@country[:projects])});" %> }
+                onload: function() {  <%= @country[:projects].nil? ? "" : "drawCharts(wb, #{(@country[:projects])});" %> }
       });
 
     },
     setBookmark: function(key, value) {
       
+    },
+    setState: function(location,indicator,project,sectors) {
+      if(location != null)
+        setLocation("",location.lat,location.lon,location.zoom);
+      this.setIndicator(indicator);
+      if(sectors != null){
+        var sector;
+        for(sector in sectors)
+          this.toggleSector(sectors[sector]);
+      } else {
+        this.toggleSector('all', false)
+      }
     },
     setLocation: function(region,lat,lon,zoom) {
       this.setBookmark('region', region);
@@ -66,8 +94,27 @@ if(typeof(F1)=='undefined') {F1 = {}}
     },
     toggleSector: function(sector,visible) {
       var self = this;
-      self.sectorPieChart(sector);
+      console.log("toggle: " + sector);
+      if(visible == null)
+        visible = "true";
+      if(sector == 'all') {
+        self.map.showLayer(self.stylelayers["Project Locations"].order, visible);
+      }
+      //self.sectorPieChart(sector);
     },
+    setIndicator: function(indicator,visible) {
+      var self = this;
+      if(indicator == null) {
+        $('#indicator').html("IndicatorS");
+        self.map.showLayer(self.stylelayers["Indicators"].order, "false");
+      }
+      else {
+        $('#indicator').html(indicator);
+        self.map.showLayer(self.stylelayers["Indicators"].order, "true");
+        self.map.setLayerStyle(self.stylelayers["Indicators"].order, F1.WorldBank.indicators[indicator].styles);
+      }
+    },
+
     sortData: function(data) {
       var self = this;
       self.activities = jq.map(data.features, function(feature) { 
@@ -109,8 +156,8 @@ if(typeof(F1)=='undefined') {F1 = {}}
       });      
     },
     projectTable: function(data) {
-      jq('#project_count').html(Object.size(this.projects));
-      jq('#activity_count').html(this.activities.length);
+      $('#project_count').html(Object.size(this.projects));
+      $('#activity_count').html(this.activities.length);
       data.attributes["activity count"] = {original_name: "activity county", name: "Activities"}
       data.attributes["financing"] = {original_name: "financing", name: "Financing"}
       data.features = this.projects;
@@ -119,9 +166,9 @@ if(typeof(F1)=='undefined') {F1 = {}}
     },
     sectorPieChart: function(sector_name) {
       var self = this;
-      console.log(self.sectors[sector_name].projects);
-      jq('#sector_funding_title').html("Project Funding for " + sector_name.capitalize() + " Projects")
-      jq('#sector_funding_total').html(self.sectors[sector_name].funding + " Million");
+      //console.log(self.sectors[sector_name].projects);
+      $('#sector_funding_title').html("Project Funding for " + sector_name.capitalize() + " Projects")
+      $('#sector_funding_total').html(self.sectors[sector_name].funding + " Million");
       pie_options = {"features":self.sectors[sector_name].projects, 
           "attributes": {"data":{"name": "Funding","original_name": "total amt0"},
           "description":{"name": "Project","original_name": "project i0"}, 
@@ -133,21 +180,46 @@ if(typeof(F1)=='undefined') {F1 = {}}
       var s;
       var features = [];
       for(s in self.sectors) { features.push(self.sectors[s]); }
-      // console.log(features)
-      jq('#funding_total').html(self.total_funding + " Million");
+      // //console.log(features)
+      $('#funding_total').html(self.total_funding + " Million");
       bar_options = {"features":features, "attributes": {
             "data":{"name": "Funding", "original_name": "funding"}, 
             "description":{"name": "Sector", "original_name": "sector"}, 
             "sort":{"name": "Activities","original_name": "activities"} } };
       F1.Visualizer.charts.bar(180, 455, bar_options, "chart-right-graph");
-    },  
+    },
+    getLayers: function(map) {
+      var self = this;
+      var findlayers = ["Project Locations", "Indicators", "Population"];
+      var possibleLayers = map.getLayers();
+      var j;
+      var index;
+      for(j in possibleLayers) {
+        index = Object.include(findlayers, possibleLayers[j].title);
+        if(index != null){
+          self.stylelayers[findlayers[index]] = {order: possibleLayers[j].order, source: possibleLayers[j].source};
+        }
+       }
+       $('#download_data').attr('href','<%= PLATFORM_API_URL %>/overlays/' + self.stylelayers["Project Locations"].source.replace("finder:","")  + ".csv")
+       return false;
+    },
+    styleMap: function(map) {
+      var self = this;
+      self.map.swf.addLayerCategoryFilter(self.stylelayers["Project Locations"].order, {attribute:"sector1code",categories:sector_icons});
+    },
     drawCharts: function(map, projects_id) {
       var self = this;
+      if( self.initialized ) {return;}
+        
+      self.getLayers(map);
+      self.styleMap(map);
       F1.Visualizer.utils.get_data_from_flash(projects_id, function(data) {
+          console.log("loaded");
           self.sortData(data);
           self.projectTable(data);
           self.sectorPieChart("public");        
           self.sectorFundingBars();
+          self.initialized = true;
         }, map);
       }      
   }
@@ -155,4 +227,6 @@ if(typeof(F1)=='undefined') {F1 = {}}
 
 var wb = new F1.WorldBank();
 wb.init(<%= @country[:map].to_s %>);
+
+function drawCharts(wb_project,projects_id) { wb_project.drawCharts(wb_project.map, projects_id)}
 </script>
