--- a/The World Bank - Climate Change_files/views.css
+++ b/The World Bank - Climate Change_files/views.css
@@ -24,7 +24,7 @@
 
 html.js a.views-throbbing,
 html.js span.views-throbbing {
-  background:url(../images/status-active.gif) no-repeat right center;
+  background:url(../wbimages/status-active.gif) no-repeat right center;
   padding-right:18px;
 }
 
