--- a/m4r/views/layout.erb
+++ b/m4r/views/layout.erb
@@ -63,7 +63,7 @@
         <li class="more"><a href="http://web.worldbank.org/WBSITE/EXTERNAL/0,,contentMDK:20130470%7EpagePK:50016803%7EpiPK:50016805%7EtheSitePK:13,00.html">View more</a></li>
       </ul>
     </div>    
-    <span id="header"><a href="http://www.worldbank.org/"> <img src="/images/worldbank_logo.gif" alt="" width="232" height="55" border="0" id="logo" /> </a> </span>
+    <span id="header"><a href="http://www.worldbank.org/"> <img src="/wbimages/worldbank_logo.gif" alt="" width="232" height="55" border="0" id="logo" /> </a> </span>
     <%= partial :search %>
     <div id="network">
       <div class="navigation"> <a class="network-home" href="http://www.worldbank.org">The World Bank</a>
