--- a/m4r/views/projects_table.erb
+++ b/m4r/views/projects_table.erb
@@ -1,6 +1,6 @@
    <!--Project Search Bar Begins-->
     <div id="projects-bar">
-      <div class="project-bar-text"><img src="images/down-arrow-black.gif" alt="" width="11" height="7" class="img-margins" />&nbsp;&nbsp;&nbsp;&nbsp;Total Project List / <%= @country[:name].capitalize %></div>
+      <div class="project-bar-text"><img src="wbimages/down-arrow-black.gif" alt="" width="11" height="7" class="img-margins" />&nbsp;&nbsp;&nbsp;&nbsp;Total Project List / <%= @country[:name].capitalize %></div>
       <div id="div">
         <form action="/" accept-charset="UTF-8" method="post" id="search-theme-form">
           <input maxlength="128" name="search_theme_form" id="project-search-box" size="15" value="" class="project-search-box-text" type="text" />
@@ -13,12 +13,12 @@
         <table width="960" border="0" cellspacing="0" cellpadding="0">
           <tr>
             <th class="project-th">Project Title</th>
-            <th><img src="images/down-arrow-black.gif" alt="" / class=" table-th-black-arrow" />Project ID</th>
-            <th><div id="commitment-arrow"><img src="images/down-arrow-black.gif" alt="" /></div>
+            <th><img src="wbimages/down-arrow-black.gif" alt="" / class=" table-th-black-arrow" />Project ID</th>
+            <th><div id="commitment-arrow"><img src="wbimages/down-arrow-black.gif" alt="" /></div>
               <div id="commitment-amount-th">Commitment Amount</div></th>
-            <th><img src="images/down-arrow-black.gif" alt="" / class=" table-th-black-arrow" />Sector</th>
-            <th><img src="images/down-arrow-black.gif" alt="" / class=" table-th-black-arrow" />Status</th>
-            <th><div id="commitment-arrow"><img src="images/down-arrow-black.gif" alt="" /></div>
+            <th><img src="wbimages/down-arrow-black.gif" alt="" / class=" table-th-black-arrow" />Sector</th>
+            <th><img src="wbimages/down-arrow-black.gif" alt="" / class=" table-th-black-arrow" />Status</th>
+            <th><div id="commitment-arrow"><img src="wbimages/down-arrow-black.gif" alt="" /></div>
               <div id="commitment-amount-th">Approval Date</div></th>
           </tr>
           <tr>
